src/test/ui/parser/issue-32214.stderr
error: associated type bindings must be declared after generic parameters
  --> $DIR/issue-32214.rs:3:25
   |
LL | pub fn test<W, I: Trait<Item=(), W> >() {}
   |                         -------^^^
   |                         |
   |                         this associated type binding should be moved after the generic parameters

error: aborting due to previous error

